tests/parsing/smtlib/poly/errors/086_define-sort_bad_name_1.psmt2
(set-logic ALL)
(define-sort _)
